fixed wrap problem for table actions

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -290,6 +290,7 @@ th
 .action
 {
     padding: 4px;
+    white-space: nowrap;
 }
 
 span.id
